<resources>
    <string name="app_name">TPN1</string>
    <string name="header1">TP Nº1</string>
    <string name="btnE1">EJERCICIO 1</string>
    <string name="btnE2">EJERCICIO 2</string>
    <string name="tvInteg"> ANDREA NUÑEZ \n GABRIEL VARGAS \n ESTEFANIA DELGADO \n ROBERTO RANGOGNI\n JOSE MORALES</string>
    <string name="header2">Suma</string>
    <string name="tvNro1">Primer Número:</string>
    <string name="tvNro2">Segundo Número:</string>
    <string name="btnCalcular">CALCULAR</string>
    <string name="btnRegresar">Regresar</string>

    <!-- Cadenas de texto para la calculadora -->
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnAdd">+</string>
    <string name="btnSubtract">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnEqual">=</string>
    <string name="btnClear">BORRAR</string>
</resources>
