<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="397dp"
        android:layout_height="358dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn7"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn8"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn9"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnAdd"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn4"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn5"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn6"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnSubtract"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn2"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn3"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnMultiply"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="174dp">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnClear"
                android:textSize="8dp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn0"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnEqual"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnDivide"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>